# auvura

./: Cargo.toml  README.md  auvura.example.toml
crates/auvura-cli/: Cargo.toml
crates/auvura-cli/src/: main.rs
crates/auvura-core/: Cargo.toml
crates/auvura-core/benches/: redaction_benchmarks.rs
crates/auvura-core/src/: audit.rs  detector.rs  json.rs  lib.rs  ner.rs  policy.rs  redactor.rs  stream.rs  types.rs
crates/auvura-core/src/detectors/: address.rs  credit_card.rs  custom_regex.rs  email.rs  iban.rs  ip.rs  mod.rs  national_id.rs  ner.rs  passport.rs  phone_number.rs  ssn.rs
crates/auvura-proxy/: Cargo.toml
crates/auvura-proxy/src/: auth.rs  config.rs  lib.rs  main.rs  metrics.rs  provider.rs  rate_limit.rs
crates/auvura-tests/: Cargo.toml
crates/auvura-tests/src/: lib.rs
crates/auvura-tests/tests/: edge_cases.rs  json_redaction.rs  policy_roundtrip.rs  redaction_pipeline.rs  streaming_redaction.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_detectors.rs  fuzz_json_redactor.rs  fuzz_redactor.rs
