[package]
name = "auvura-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for PII detection, redaction, and proxy management"

[[bin]]
name = "auvura"
path = "src/main.rs"

[dependencies]
auvura-core = { path = "../auvura-core" }
auvura-proxy = { path = "../auvura-proxy" }
axum = { version = "0.8", features = ["json"] }
clap = { workspace = true }
dashmap = "6"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
