[package]
name = "auvura-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex = { workspace = true }
phonelib = { workspace = true }
zeroize = "1.8.2"

# NER support (optional)
candle-core = { version = "0.3", optional = true }
candle-transformers = { version = "0.3", optional = true }

[features]
default = []
ner = ["dep:candle-core", "dep:candle-transformers"]
