[package]
name = "auvura-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
regex = { workspace = true }
aho-corasick = { workspace = true }
phonelib = { workspace = true }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }
zeroize = "1.8.2"
blake3 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "redaction_benchmarks"
harness = false

[features]
default = []
ner = []
