[package]
name = "auvura-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
auvura-core = { path = "../auvura-core" }
axum = { version = "0.8", features = ["json"] } # Using the 2025/26 stable 0.8
tokio = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
