[package]
name = "auvura-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
auvura-core = { path = "../auvura-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde.workspace = true
serde_json.workspace = true
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
clap = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
wiremock = "0.6"
